--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,21 @@
     object-fit: cover;
     height: 300px; 
 }
+
+.card:hover {
+    box-shadow: 0 8px 16px rgba(137, 24, 104, 0.696);
+  }
+
+.card-link {
+    color: inherit;
+    text-decoration: none;
+}
+
+.btn-space {
+    margin-right: 5px;
+}
+
+.book-cover{
+    object-fit: cover;
+    height: 200px; 
+}
