--- a/src/custom-styles.scss
+++ b/src/custom-styles.scss
@@ -16,8 +16,15 @@ $secondary: #a492e3;
     border-color: $indigo-200;
 }
 
+.custom-form-bk {
+    background-color: $gray-200;
+}
+
 .custom-navbar {
     background-color: #a392e376;
 }
 
+.custom-label {
+    color: $indigo-700;
+  }
 
